<resources>
    <string name="app_name">出費メモ！</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="add">追加</string>

    <string name="user_no_name">No name</string>
    <string name="user_no_mail">No mailAddress</string>

    <string name="fragment_login_title">ログイン</string>
    <string name="fragment_login_create_user_or_login_message">ログインまたはユーザーの作成をしてください</string>
    <string name="fragment_login_email">メールアドレス</string>
    <string name="fragment_login_password">パスワード</string>
    <string name="fragment_login_password_restriction">パスワードの長さは6文字以上にしてください</string>
    <string name="fragment_login_create_user">ユーザー作成</string>
    <string name="fragment_login_login">ログイン</string>
    <string name="fragment_login_create_user_failed">ユーザー作成に失敗しました</string>
    <string name="fragment_login_mail_address_is_already_used">このメールアドレスはすでに使われています</string>
    <string name="fragment_login_password_invalid">パスワードが正しくありません</string>
    <string name="fragment_login_mail_address_invalid">メールアドレスが正しくありません</string>
    <string name="fragment_login_cannot_find_user">このメールアドレスは登録されていません</string>
    <string name="fragment_login_authentication_failed">認証に失敗しました</string>

    <string name="fragment_main_add_title">出費メモの追加</string>
    <string name="fragment_main_add_tag">タグ</string>
    <string name="fragment_main_add_value">金額</string>
    <string name="fragment_main_add_note">メモ</string>
    <string name="fragment_main_click_expense_title">%1$s : %2$d</string>
    <string-array name="fragment_main_click_expense_selector">
        <item>編集</item>
        <item>削除</item>
    </string-array>
    <string name="fragment_main_edit_title">出費メモの編集</string>
    <string name="fragment_main_edit_ok">編集</string>
    <string name="fragment_main_remove_title">出費メモの削除</string>
    <string name="fragment_main_remove_message">%1$s : %2$d を削除しますか？</string>
    <string name="fragment_main_header_tag">タグ</string>
    <string name="fragment_main_header_value">金額</string>
    <string name="fragment_main_header_note">メモ</string>
    <string name="fragment_main_footer">以上</string>
    <string name="fragment_main_menu_delete">メモの削除</string>
    <string name="fragment_main_menu_delete_dialog_message">選択されたメモを削除しますか？</string>
    <string name="fragment_main_menu_delete_checked_list_empty">メモが選択されていません</string>
    <string name="fragment_main_menu_tag_edit">タグの編集</string>

    <string name="fragment_tag_list_title">タグ一覧</string>
    <string name="fragment_tag_list_add_tag_title">タグの追加</string>
    <string name="fragment_tag_list_add_tag_hint">タグ名</string>
    <string name="fragment_tag_list_remove_tag_title">タグの削除</string>
    <string name="fragment_tag_list_remove_tag">タグ「%1$s」を削除しますか？</string>
</resources>
