<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialog_view_fragment_main_add"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_mid">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/dialog_view_fragment_main_add_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_main_add_tag"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/dialog_view_fragment_main_add_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_main_add_value"
                android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/dialog_view_fragment_main_add_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_main_add_note"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>