<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.LoginFragment">

    <data>

        <variable
                name="viewModel"
                type="com.example.go.memoexpensesapplication.viewmodel.FragmentLoginViewModel" />

        <variable
                name="loginFragment"
                type="com.example.go.memoexpensesapplication.fragment.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_mid">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_mid" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_mid" />

        <TextView
                android:id="@+id/create_user_or_sign_in_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_login_create_user_or_login_message"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/create_user_or_sign_in_message">

            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_login_email"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.mail}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/container_email">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_login_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_create_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mid"
                android:onClick="@{() -> loginFragment.onClickCreateUser()}"
                android:text="@string/fragment_login_create_user"
                app:layout_constraintEnd_toStartOf="@+id/btn_login"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/container_password" />

        <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mid"
                android:onClick="@{() -> loginFragment.onClickLogin()}"
                android:text="@string/fragment_login_login"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/btn_create_user"
                app:layout_constraintTop_toTopOf="@id/btn_create_user" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>